# hak-talent-mapping

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
doc/: Academic_Educational_Services.md  RETAIL_SCORING_MODEL.md  RETAIL_SCORING_MODEL_v3.md  Retails-updated.md  current-implementation.md  phase3-architecture.drawio  phase3-enrichment-plan.md  top_200_retailers_uae.md  value-proposition (2).html  value-proposition.md
doc/phase3/: 01-overview.md  02-architecture.md  03-database-schema.md  04-scoring-model.md  05-vector-search.md  06-implementation.md
scoring_configs/: retailers.yaml
scripts/: flag_top_companies.py  run_ae_sectors.sh  run_scraper.py
src/hak_talent_mapping/: config.py
src/hak_talent_mapping/core/: constants.py  exceptions.py  models.py
src/hak_talent_mapping/db/: audit_repository.py  detail_repository.py  repository.py  score_repository.py
src/hak_talent_mapping/services/: detail_scraper.py  listing_scraper.py
src/hak_talent_mapping/services/enrichment/: pipeline.py  web_search.py  website_scraper.py
src/hak_talent_mapping/services/llm/: base.py  claude_provider.py  openrouter_provider.py  prompts.py
src/hak_talent_mapping/utils/: http.py
supabase/: schema.sql
supabase/migrations/: 002_add_top_company.sql  003_company_enrichment.sql  004_enrichment_audit.sql  005_scoring_v2.sql
tests/: conftest.py
tests/unit/: test_listing_scraper.py  test_llm_provider.py  test_models.py  test_pipeline.py  test_scoring_config_loader.py  test_scoring_engine.py  test_vector_helpers.py  test_web_search.py
(+4 files in other folders)
